<resources>
    <string name="app_name">Try</string>
    <string name="welcome">Welcome</string>
    <string name="searchboxvalue">Enter your keyword here</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="postajob">Post a Job</string>
    <string name="close">Close</string>
    <string name="verify">Verify</string>
    <string name="verifycode">Mobile Number Verification</string>
    <string name="gotoforgotpassword">Forgot Password?</string>
    <string name="forgotpasswordsubhead">Please enter your registered mobile number</string>
    <string name="empforgotpasswordsubhead">Please enter your registered email address</string>
    <string name="pleaseselecttherole">Please select the role</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="nottry">New to TRY ?</string>
    <string name="login">Login</string>
    <string name="callemp">Call Employer</string>
    <string name="call_sl">Call</string>
    <string name="empoyernotacceptcall">This employer does not accept calls</string>
    <string name="callpermissiondenied">Call Permission is denied</string>
    <string name="alreadyjobapplied">You cannot apply for this job as your profile does not match with the
                                    requirement</string>
    <string name="employedfrom">Employed From</string>
    <string name="employedtill">Employed Till</string>
    <string name="icurrent">I currently work here</string>
    <string name="annualsal">Annual Salary</string>
    <string name="rememberme">Remember me</string>
    <string name="verifydiatext">Please enter the \ "PASSWORD \" that has sent to your given mobile number</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cvv">CV : </string>
    <string name="shortlist">SHORTLIST</string>
    <string name="reject">REJECT</string>
    <string name="block">BLOCK</string>
    <string name="hold">HOLD</string>
    <string name="viewprofilee">View Profile : </string>
    <string name="submitjob">Submit Job</string>
    <string name="jd">Job Details:</string>
    <string name="userid">User ID : </string>
    <string name="loc">Location :</string>
    <string name="skillreq">Skills Required</string>
    <string name="regsiter">Register</string>
    <string name="submit">Submit</string>
    <string name="favempty">No profile in your favorite list!</string>
    <string name="jsfavempty">No job in your favorite list!</string>
    <string name="nodata">No data found!</string>
    <string name="agree"><u>Terms and Conditions</u></string>
    <string name="signup">Register Here</string>
    <string name="howtouse">How to Use</string>
    <string name="currentlocation">Location</string>
    <string name="more">More</string>
    <string name="oops">Oops!!!</string>
    <string name="invalid">Invalid Username or Password!</string>
    <string name="emailid">eMail ID</string>
    <string name="email">Email</string>
    <string name="sharejob">Share Job</string>
    <string name="iagree">I agree with</string>
    <string name="age">Age</string>
    <string name="agevalue">Age %1$s %2$s</string>
    <string name="location">Location</string>
    <string name="searchcity">Search City</string>
    <string name="reccompname">Recruiting for</string>
    <string name="locationactivetitle">Location Services Not Active</string>
    <string name="locationactivemessage">Please enable Location Services and GPS</string>
    <string name="role">Role</string>
    <string name="minsal">Salary Range</string>
    <string name="jobtype">Job Type</string>
    <string name="sly">Monthly Salary</string>
    <string name="slyy">Salary</string>
    <string name="slypm">Salary per month</string>
    <string name="phoneno">Phone No.</string>
    <string name="res_quali">Qualification : </string>
    <string name="qualification">Qualification</string>
    <string name="mobilenumber">Mobile No</string>
    <string name="chooseurlang">Choose Your Language</string>
    <string name="experience">Experience</string>
    <string name="exp">Exp</string>
    <string name="skill">Skill</string>
    <string name="skills">Skills</string>
    <string name="selectspec">Select Specialization</string>
    <string name="selectcity">Select City</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="add">ADD</string>
    <string name="error_player">There was an error initializing the YouTubePlayer</string>
    <string name="dob">Date of Birth</string>
    <string name="jobdetails">Job Details</string>
    <string name="readmore"><u>Read More</u></string>
    <string name="designation">Designation</string>
    <string name="companyname">Company Name</string>
    <string name="industry">Industry</string>
    <string name="languages">Languages</string>
    <string name="qualificationlevel">Qualification Level</string>
    <string name="specialisation">Specialization</string>
    <string name="coursetype">Course Type</string>
    <string name="passedoutyear">Passout Year</string>
    <string name="institute">Institute Name</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="changepassword">Change Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="allindia">All India</string>
    <string name="welcomeguest">Guest</string>
    <string name="confirmation">Confirmation</string>
    <string name="gpsdetecth">GPS deducting issue</string>
    <string name="gpscontent">GPS could not deduct your current location. Please try by changing the
        location</string>
    <string name="deleteconfirm">Delete Confirmation</string>
    <string name="delskill">Are you sure you want to delete this skill ?</string>
    <string name="deletejobsposted">Are you sure you want to delete this job from your posted
        job list ?</string>
    <string name="employmentdeleteconfirm">Are you sure you want to delete this employment ?</string>
    <string name="empfavremove">Are you sure you want to delete this candidate from your favourite
        list ?</string>
    <string name="edudeletealert">Are you sure you want to delete this education ?</string>
    <string name="removejobfav">Are you sure you want to delete this job from your favourite list ?
    </string>
    <string name="nojobfoundclalert">No job found in your current location.Are you sure you want to
        get the jobs nearby your location ?</string>
    <string name="contact_us">Thanks for contacting us. If needed, our team will be in touch with you soon.</string>
    <string name="responses">Responses</string>
    <string name="emptyresponse">No response for you!</string>
    <string name="filter">Filter</string>
    <string name="langknown">Languages Known</string>
    <string name="spplicastatus">Application Status</string>
    <string name="jobtitle">Job Title</string>
    <string name="savepro">Proceed</string>
    <string name="showphnoo">Show phone number</string>
    <string name="saloff">Salary Offered</string>
    <string name="jobrole">Job Role</string>
    <string name="duration">Duration</string>
    <string name="jsyesno">Do you need a job?</string>
    <string name="apply">Apply</string>
    <string name="skillname">Skill name</string>
    <string name="passwordd">Password : </string>
    <string name="title">Title</string>
    <string name="expneed">Exp. Needed</string>
    <string name="eduquali">Edu. Qualify.</string>
    <string name="verificationcode">Verification Code</string>
    <string name="resetall">Reset All</string>
    <string name="done">Done</string>
    <string name="sendemail">Send an email</string>
    <string name="currentstatus">Current Status : </string>
    <string name="appliedon">Applied on : </string>
    <string name="appliedhistory">Applied Job History</string>
    <string name="appliedhisemptymsg">You didn\'t applied any job</string>
    <string name="emplistemptymsg">No profile found!</string>
    <string name="responselistemptymsg">No profile found!</string>
    <string name="employeelist">List of Candidates</string>
    <string name="hypen">-</string>
    <string name="posted">Posted</string>
    <string name="resume">Resume</string>
    <string name="empprofile">Candidate’s Profile</string>
    <string name="clickhere">Click here</string>
    <string name="personal">Personal</string>
    <string name="employment">Employment</string>
    <string name="greaterthan">></string>
    <string name="education">Education</string>
    <string name="myfav">My Favorites</string>
    <string name="emplogin">Employer Login</string>
    <string name="jslogin">Job Seeker Login</string>
    <string name="state">State</string>
    <string name="quali">Quali :</string>
    <string name="desiredjd">Desired Job Details</string>
    <string name="jobloc">Job Location</string>
    <string name="myprofile">My Profile</string>
    <string name="chooselanguages">Change Language</string>
    <string name="compinfo">Company info</string>
    <string name="callsetting">Call settings</string>
    <string name="contperson">Contact Person</string>
    <string name="showphno">Can job seekers call me?</string>
    <string name="setcalltime">I recieve calls</string>
    <string name="anytime">Any Time</string>
    <string name="spectime">Specific Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="jobsposted">Jobs Posted</string>
    <string name="postedon">Posted on</string>
    <string name="empty_jobsposted">No job posted!</string>
    <string name="jobinfo">Job Information</string>
    <string name="editjob">Edit Job</string>
    <string name="edit">- Edit -</string>
    <string name="select">- Select -</string>
    <string name="selectt">Go</string>
    <string name="selectgender">Select Gender</string>
    <string name="selectexp">Select Experience</string>
    <string name="selectskill">Select Skill</string>
    <string name="selectsalary">Select Salary</string>
    <string name="selectrole">Select Job Role</string>
    <string name="pleaseselectlang">Please select the languages known</string>
    <string name="time">Time</string>
    <string name="selectindustry">Select Industry</string>
    <string name="selectjobtype">Select Job Type</string>
    <string name="selectquali">Select Qualification</string>
    <string name="selecttype">Select Type</string>
    <string name="selectcoursetype">Select Course Type</string>
    <string name="selectpassoutyear">Select Passout Year</string>
    <string name="selectcoursetypeverify">Please select the course type</string>
    <string name="pleaseselectthepassoutyear">Please select the Year </string>
    <string name="pleaseselectthespeci">Please select the Specification</string>
    <string name="enterinstitutename">Please enter the institute name atleast with 3 characters</string>
    <string name="changestatus">Change Status</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>
    <string name="acceptjobwhen">Accept application only when:</string>
    <string name="pleaseselectqualification">Please select the qualification</string>
    <string name="aboutjob">About job</string>
    <string name="nofification">Notification</string>
    <string name="name">Name</string>
    <string name="feedback">Feedback</string>
    <string name="your_comments">Your comments</string>
</resources>