<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0dacc"
    android:orientation="vertical">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8.12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4.87"
        android:background="@drawable/yellowbg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/yellow_topnbottom"
            android:layout_marginLeft="@dimen/marginleftright"
            android:layout_marginTop="@dimen/yellow_topnbottom"
            android:contentDescription="@string/app_name"
            android:src="@drawable/register_icon" />

        <com.jobsearchtry.utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/yellow_topnbottom"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/regsiter"
            android:textColor="#000"
            android:textSize="@dimen/textSizeAverage"
            customfontdemo:fontName="MyriadPro-BoldCond.otf" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="86.01"
        android:background="#e0dacc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/js_Marginright"
            android:layout_marginRight="@dimen/js_Marginright"
            android:layout_marginTop="@dimen/buttonHeightSmall"
            android:orientation="vertical">

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/r_companyname"
                style="@style/App_EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/companyname"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/r_phonenumber"
                style="@style/App_EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/phoneno"
                android:imeOptions="actionNext"
                android:inputType="phone"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <LinearLayout
                android:id="@+id/r_industry_lay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:background="@drawable/border_edittext"
                android:orientation="horizontal">

                <com.jobsearchtry.utils.MyButton
                    android:id="@+id/r_industry"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center|start"
                    android:maxLines="1"
                    android:padding="@dimen/editboxpadding"
                    android:text="@string/selectindustry"
                    android:textColor="#086fa1"
                    android:textSize="@dimen/Text_size"
                    customfontdemo:fontName="MyriadPro-Cond.ttf" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_edittext"
                    android:clickable="false"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/editboxpadding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_down_float" />
            </LinearLayout>

            <com.jobsearchtry.utils.CustomAutoCompleteTextView
                android:id="@+id/r_location"
                style="@style/App_EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/location"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:textCursorDrawable="@drawable/custom_cursor"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/r_emailaddress"
                style="@style/App_EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/emailid"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/r_contactperson"
                style="@style/App_EditTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/contperson"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/emp_checkbox_jd_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custom_checkbox"
                    android:checked="false"
                    android:textColor="#086fa1"
                    android:textSize="@dimen/Text_size" />

                <com.jobsearchtry.utils.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iagree"
                    android:textColor="#086fa1"
                    android:textColorHint="#80086fa1"
                    android:textSize="@dimen/Text_size"
                    customfontdemo:fontName="MyriadPro-Cond.ttf" />

                <com.jobsearchtry.utils.MyTextView
                    android:id="@+id/emp_termsOfAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginBottom="@dimen/termandcondition"
                    android:text="@string/agree"
                    android:textColor="#086fa1"
                    android:textColorHint="#80086fa1"
                    android:textSize="@dimen/Text_size"
                    customfontdemo:fontName="MyriadPro-Cond.ttf" />
            </LinearLayout>


            <com.jobsearchtry.utils.MyButton
                android:id="@+id/tryEmpRegister"
                style="@style/App_ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonHeightLarge"
                android:layout_marginTop="@dimen/buttonHeightSmall"
                android:text="@string/submit"
                customfontdemo:fontName="MyriadPro-BoldCond.otf" />
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/bottomblue_footer"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
</LinearLayout>