<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8.12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4.87"
        android:background="@drawable/yellowbg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/yellow_topnbottom"
            android:layout_marginLeft="@dimen/marginleftright"
            android:layout_marginTop="@dimen/yellow_topnbottom"
            android:contentDescription="@string/app_name"
            android:src="@drawable/feedback_icon" />

        <com.jobsearchtry.utils.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/yellow_topnbottom"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/feedback"
            android:textColor="#000"
            android:textSize="@dimen/textSizeAverage"
            customfontdemo:fontName="MyriadPro-BoldCond.otf" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="86.01"
        android:background="#e0dacc">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/js_Marginright"
            android:layout_marginRight="@dimen/js_Marginright"
            android:layout_marginTop="@dimen/buttonHeightSmall"
            android:orientation="vertical">

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/fd_Name"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/fd_Email"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/fd_phoneNo"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:hint="@string/phoneno"
                android:imeOptions="actionNext"
                android:inputType="number"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <LinearLayout
                android:id="@+id/feedback_lay"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/about_trytop"
                android:background="@drawable/border_edittext"
                android:orientation="horizontal">

                <com.jobsearchtry.utils.MyButton
                    android:id="@+id/feedback_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center|start"
                    android:padding="@dimen/editboxpadding"
                    android:text="@string/selecttype"
                    android:textColor="#086fa1"
                    android:textSize="@dimen/Text_size"
                    customfontdemo:fontName="MyriadPro-Cond.ttf" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border_edittext"
                    android:clickable="false"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/editboxpadding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_down_float" />
            </LinearLayout>

            <com.jobsearchtry.utils.MyEditText
                android:id="@+id/fd_message"
                style="@style/App_EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_trytop"
                android:gravity="top|start"
                android:hint="@string/your_comments"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:maxLines="5"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                customfontdemo:fontName="MyriadPro-Cond.ttf" />

            <com.jobsearchtry.utils.MyButton
                android:id="@+id/feedback_submit"
                style="@style/App_ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonHeightLarge"
                android:layout_marginTop="@dimen/buttonHeightSmall"
                android:text="@string/submit"
                customfontdemo:fontName="MyriadPro-BoldCond.otf" />
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/bottomblue_footer"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
</LinearLayout>

