<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#dedede"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/locheader"
        android:background="#088cbd"
        android:orientation="horizontal">

        <com.jobsearchtry.utils.MyTextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/emp_imageright"
            android:layout_marginLeft="@dimen/marginlr"
            android:layout_marginTop="@dimen/emp_imageright"
            android:layout_weight="0.80"
            android:gravity="center|start"
            android:text="@string/verifycode"
            android:textColor="#fff"
            android:textSize="@dimen/textSize"
            customfontdemo:fontName="MyriadPro-Cond.ttf" />

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:layout_marginRight="@dimen/emp_imageright"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:src="@drawable/exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.jobsearchtry.utils.MyTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginlr"
            android:layout_marginRight="@dimen/js_Marginright"
            android:layout_marginTop="@dimen/Txtview_Margintop"
            android:text="@string/verifydiatext"
            android:textColor="#4e4e4e"
            android:textSize="@dimen/textsize"
            customfontdemo:fontName="MyriadPro-Cond.ttf" />

        <com.jobsearchtry.utils.MyTextView
            android:id="@+id/subheader_mobilenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginlr"
            android:layout_marginRight="@dimen/js_Marginright"
            android:layout_marginTop="@dimen/layoutmargintop"
            android:text="@string/userid"
            android:textColor="#4e4e4e"
            android:textSize="@dimen/textsize"
            customfontdemo:fontName="MyriadPro-Cond.ttf" />

        <com.jobsearchtry.utils.MyEditText
            android:id="@+id/code1"
            style="@style/App_EditTextStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginlr"
            android:layout_marginRight="@dimen/js_Marginright"
            android:layout_marginTop="@dimen/margintop"
            android:hint="@string/verificationcode"
            android:inputType="text|textCapWords"
            customfontdemo:fontName="MyriadPro-Cond.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jobsearchtry.utils.MyButton
                android:id="@+id/btnVerify"
                style="@style/App_ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonHeightToSmall"
                android:layout_marginTop="@dimen/Txtview_Margintop"
                android:text="@string/verify"
                customfontdemo:fontName="MyriadPro-BoldCond.otf" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>